# fire-smoke-digital-twin

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  FILE_MANIFEST.md  MODULE_OWNERS.md  README.md  SCOPE.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
configs/: README.md  label_rules.yaml  noise_presets.yaml  scenario_factors.yaml  scenario_schema.yaml  schema_version.yaml  sensor_schema.yaml  split_rules.yaml
configs/model_configs/: bat_gnn.yaml
dashboard/backend/: Dockerfile  README.md
dashboard/backend/app/: main.py  schemas.py
dashboard/frontend/: README.md  package.json
dashboard/frontend/src/: README.md
data/: README.md
docs/: data_contracts.md  data_schema.md  migration_plan.md  repo_review.md
docs/checkin_notes/: README.md
docs/learning_notes/: README.md
docs/modules/: 01_bim_graph.md  02_cfast_scenarios.md  03_iot_dataset.md  04_ai_models.md  05_fds_dashboard.md
notebooks/: README.md  debug_ifc.ipynb
outputs/: README.md
report/: README.md
scripts/: README.md  bootstrap_repo.cmd  build_graph_batch.py  check.cmd  create_tree_only.cmd  extract_fds_case.py  make_dataset.py  migrate_current_layout.cmd  parse_ifc_batch.py  run_cfast_batch.py  setup.cmd  test.cmd
src/fire_smoke_dt/bim_graph/: README.md  fallback_manual_graph.py  graph_builder.py  ifc_export_notes.md  ifc_parser.py  (+1 more)
tests/fixtures/: README.md
tests/integration/: test_cfast_debug_case_real.py  test_data_contracts.py  test_pipeline_graph_to_cfast_input.py
(+57 files in other folders)
