[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fire-smoke-digital-twin"
version = "0.1.0"
description = "BIM, fire simulation, virtual IoT and graph-time-series surrogate research pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "networkx",
  "numpy",
  "pandas",
  "pyarrow",
  "pydantic",
  "PyYAML",
]

[project.optional-dependencies]
bim = ["ifcopenshell"]
ml = ["scikit-learn", "torch", "torch-geometric"]
api = ["fastapi", "uvicorn"]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fire_smoke_dt*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "external: requires CFAST/FDS or other external binaries",
  "slow: long-running research test",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
check_untyped_defs = true
